# vanity_address

./: Cargo.toml  README.md
src/: generator.rs  main.rs  patterns.rs  storage.rs
